--- a/src/components/Header/headerStyles.css
+++ b/src/components/Header/headerStyles.css
@@ -42,7 +42,7 @@
     text-decoration: none;
     color: black;
     font-size: larger;
-    font-weight: bold;
+    font-weight: normal;
     border-radius: 1px solid black;
 }
 
