--- a/src/components/Header/headerStyles.css
+++ b/src/components/Header/headerStyles.css
@@ -1,13 +1,13 @@
 .app-header {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     top: 0;
     left: 0;
-    width: 100%;
-    padding: 1rem 0;
-    background-color: white;
+    width: 90%;
+    padding: 0.5rem 2rem;
+    margin: auto;
 }
 
 .header-logo-container {
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 0;
+    flex: 0 0 auto;
 }
 
 .header-logo-container p {
@@ -35,7 +36,26 @@
 .header-links {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    flex: 1;
+    gap: 2rem;
+    /* padding: 0 2rem; */
+}
+
+.header-navigation {
+    display: flex;
+    flex-direction: row;
     gap: 1.5rem;
+    flex: 1;
+    justify-content: center;
+}
+
+.header-auth {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    flex: 0 0 auto;
 }
 
 .header-link {
@@ -43,7 +63,7 @@
     color: black;
     font-size: larger;
     font-weight: normal;
-    border-radius: 1px solid black;
+    white-space: nowrap;
 }
 
 /* Mobile responsive styles */
@@ -51,6 +71,17 @@
     .app-header {
         justify-content: space-between;
         padding: 1rem;
+    }
+
+    .header-links {
+        flex-direction: column;
+        gap: 1rem;
+        padding: 0 1rem;
+        align-items: flex-end;
+    }
+
+    .header-navigation {
+        justify-content: flex-end;
     }
 
     .header-logo-container {
@@ -66,11 +97,29 @@
         font-size: 0.7rem;
     }
 
-    .header-links {
-        gap: 0.8rem;
-    }
-
     .header-link {
         font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .app-header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1rem;
+    }
+
+    .header-links {
+        width: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0;
+    }
+
+    .header-navigation,
+    .header-auth {
+        flex-direction: row;
+        width: 100%;
+        justify-content: flex-start;
     }
 }
