--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(31, 31, 31, 0.87);
-  background-color: #f9f9f9;
+  background-color: #e8e6e6;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
