--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,38 @@ a {
 a:hover {
   color: #535bf2;
 }
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #d1d5db transparent;
+}
+
+/* WebKit (Chrome, Edge, Safari) */
+::-webkit-scrollbar {
+    width: 6px;  /* Makes the vertical scrollbar thinner */
+    height: 6px; /* Makes the horizontal scrollbar thinner */
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d1d5db;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #9ca3af;
+}
+
+#button {
+  
+    margin-top: 1rem;
+    background: #0f2027;
+    background: -webkit-linear-gradient(to right, #2c5364, #203a43, #0f2027);
+    background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
+    color: white;
+    font-weight: bold;
+
+}
