--- a/src/components/Home/homeStyles.css
+++ b/src/components/Home/homeStyles.css
@@ -7,11 +7,17 @@
     margin-top: 2rem;
     background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    animation: fadeIn 1s ease-in-out forwards;
 }
 
 .home-text {
     font-size: 2rem;
     color: white;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
 
 #home-button {
